syntax = "proto3";

package userservice;

option go_package = "./;pb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse);
    rpc DeleteUserById (DeleteUserByIdRequest) returns (DeleteUserByIdResponse);
    rpc IsValidLogin (IsValidLoginRequest) returns (IsValidLoginResponse);
    rpc ConfirmUser (ConfirmUserRequest) returns (ConfirmUserResponse);
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string result = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    User result = 1;
}

message DeleteUserByIdRequest {
    string id = 1;
}

message DeleteUserByIdResponse {
    string id = 1;
}

message IsValidLoginRequest {
    string email = 1;
    string password = 2;
}

message IsValidLoginResponse {
    bool is_valid = 1;
}

message User {
    string id = 1;
    string email = 2;
    string password = 3;
    bool is_confirmed = 4;
}

message ConfirmUserRequest {
    string email = 1;
}

message ConfirmUserResponse {
    bool is_confirmed = 1;
}